--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,6 +30,7 @@ jobs:
         refreshenv
         Get-ChildItem -Path "C:\Program Files\doxygen\bin"
         & 'C:\Program Files\doxygen\bin\doxygen.exe' --version
+        Add-Content $env:GITHUB_PATH 'C:\Program Files\doxygen\bin'
 
     - name: Configure CMake
       run: >
