Add DEVICE_INFO_GLOBAL_VARIABLE_SUPPORT device info query.
This gates support for the EnqueueDeviceGlobalVariableRead and Write
operations. The CTS tests for these now check for support before
running, and all adapters report their support correctly.

--- a/scripts/core/device.yml
+++ b/scripts/core/device.yml
@@ -439,6 +439,8 @@ etors:
       desc: "[$x_device_handle_t[]] The set of component devices contained by this composite device."
     - name: COMPOSITE_DEVICE
       desc: "[$x_device_handle_t] The composite device containing this component device."
+    - name: GLOBAL_VARIABLE_SUPPORT
+      desc: "[$x_bool_t] return true if the device supports the `EnqueueDeviceGlobalVariableWrite` and `EnqueueDeviceGlobalVariableRead` entry points."
 --- #--------------------------------------------------------------------------
 type: function
 desc: "Retrieves various information about device"
