--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -8,7 +8,10 @@ add_subdirectory(umf_pools)
 
 add_ur_library(ur_common STATIC
     umf_helpers.hpp
+    umf_helpers.cpp
     ur_pool_manager.hpp
+    ur_pool_handle.hpp
+    ur_pool_handle.cpp
     $<$<PLATFORM_ID:Windows>:windows/ur_lib_loader.cpp>
     $<$<PLATFORM_ID:Linux,Darwin>:linux/ur_lib_loader.cpp>
 )
