Refactor kernel triggering in fuzz tests
- Properly set up and trigger the test kernel within the fuzz test.
- Change the test kernel used from "bar" to "fill".
- Refactor env vars used in test.

--- a/test/fuzz/CMakeLists.txt
+++ b/test/fuzz/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (C) 2023 Intel Corporation
+# Copyright (C) 2023-2024 Intel Corporation
 # Part of the Unified-Runtime Project, under the Apache License v2.0 with LLVM Exceptions.
 # See LICENSE.TXT
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
@@ -38,7 +38,7 @@ function(add_fuzz_test name label)
         ENVIRONMENT "${ENV_VARS}")
     # TODO: Should we check if this sanitizer flag is available?
     target_compile_options(${TEST_TARGET_NAME} PRIVATE -g -fsanitize=fuzzer)
-    target_compile_definitions(${TEST_TARGET_NAME} PRIVATE -DKERNEL_IL_PATH="${UR_CONFORMANCE_DEVICE_BINARIES_DIR}/bar/sycl_spir641.spv")
+    target_compile_definitions(${TEST_TARGET_NAME} PRIVATE -DKERNEL_IL_PATH="${UR_CONFORMANCE_DEVICE_BINARIES_DIR}/fill/spir64.bin.0")
     target_include_directories(${TEST_TARGET_NAME} PRIVATE ${UR_CONFORMANCE_DEVICE_BINARIES_DIR})
 
     add_dependencies(${TEST_TARGET_NAME} generate_device_binaries)
