Make urDeviceCreateWithNativeHandle hPlatform optional.

--- a/scripts/core/device.yml
+++ b/scripts/core/device.yml
@@ -820,7 +820,7 @@ params:
       desc: "[in][nocheck] the native handle of the device."
     - type: $x_platform_handle_t
       name: hPlatform
-      desc: "[in] handle of the platform instance"
+      desc: "[in][optional] handle of the platform instance"
     - type: const $x_device_native_properties_t*
       name: pProperties
       desc: "[in][optional] pointer to native device properties struct."
