Update in custom user paths of L0
Changes the handling of the UR_LEVEL_ZERO_INCLUDE_DIR environment variable. The user can provide any direct path to the include directory containing level zero headers. No 'level-zero' subdirectory appended to this path anymore.

Note that the path to the include directory has to end with a slash, like ie. "level-zero/include/".

--- a/source/adapters/level_zero/CMakeLists.txt
+++ b/source/adapters/level_zero/CMakeLists.txt
@@ -19,9 +19,9 @@ if (NOT UR_LEVEL_ZERO_LOADER_LIBRARY STREQUAL "")
   file(COPY ${UR_LEVEL_ZERO_LOADER_LIBRARY} DESTINATION ${LEVEL_ZERO_COPY_DIR} FOLLOW_SYMLINK_CHAIN)
 endif()
 if (NOT UR_LEVEL_ZERO_INCLUDE_DIR STREQUAL "")
-  set(LEVEL_ZERO_INCLUDE_DIR ${LEVEL_ZERO_COPY_DIR}/level_zero)
+  set(LEVEL_ZERO_INCLUDE_DIR ${LEVEL_ZERO_COPY_DIR})
   message(STATUS "Level Zero Adapter: Copying Level Zero headers to local build tree")
-  file(COPY ${UR_LEVEL_ZERO_INCLUDE_DIR}/level_zero DESTINATION ${LEVEL_ZERO_COPY_DIR})
+  file(COPY ${UR_LEVEL_ZERO_INCLUDE_DIR}/ DESTINATION ${LEVEL_ZERO_COPY_DIR})
 endif()
 
 if (NOT DEFINED LEVEL_ZERO_LIBRARY OR NOT DEFINED LEVEL_ZERO_INCLUDE_DIR)
