--- a/scripts/core/device.yml
+++ b/scripts/core/device.yml
@@ -524,7 +524,7 @@ params:
     - type: "$x_device_handle_t"
       name: hDevice
       desc: |
-            [in] handle of the device to release.
+            [in][release] handle of the device to release.
 --- #--------------------------------------------------------------------------
 type: enum
 desc: "Device affinity domain"
