--- a/scripts/core/memory.yml
+++ b/scripts/core/memory.yml
@@ -368,7 +368,7 @@ analogue:
 params:
     - type: $x_mem_handle_t
       name: hMem
-      desc: "[in] handle of the memory object to release"
+      desc: "[in][release] handle of the memory object to release"
 returns:
     - $X_RESULT_ERROR_INVALID_MEM_OBJECT
     - $X_RESULT_ERROR_OUT_OF_HOST_MEMORY
