--- a/scripts/core/queue.yml
+++ b/scripts/core/queue.yml
@@ -204,7 +204,7 @@ details:
 params:
     - type: $x_queue_handle_t
       name: hQueue
-      desc: "[in] handle of the queue object to release"
+      desc: "[in][release] handle of the queue object to release"
 returns:
     - $X_RESULT_ERROR_INVALID_QUEUE
     - $X_RESULT_ERROR_OUT_OF_HOST_MEMORY
