--- a/test/fuzz/CMakeLists.txt
+++ b/test/fuzz/CMakeLists.txt
@@ -5,26 +5,11 @@
 
 function(add_fuzz_test name label)
     set(TEST_TARGET_NAME fuzztest-${name})
-    add_ur_executable(${TEST_TARGET_NAME}
-        urFuzz.cpp)
-    target_link_libraries(${TEST_TARGET_NAME}
-        PRIVATE
-        ${PROJECT_NAME}::loader
-        ${PROJECT_NAME}::headers
-        ${PROJECT_NAME}::common
-        -fsanitize=fuzzer)
-    add_test(NAME ${TEST_TARGET_NAME}
-        COMMAND ${TEST_TARGET_NAME} ${ARGN} -verbosity=1
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
-    set(ENV_VARS UR_ENABLE_LAYERS=UR_LAYER_FULL_VALIDATION)
-    if(UR_BUILD_ADAPTER_L0 OR UR_BUILD_ADAPTER_ALL)
+    set(ENV_VARS "")
+    if(UR_USE_UBSAN)
         list(APPEND ENV_VARS
-                UR_ADAPTERS_FORCE_LOAD=\"$<TARGET_FILE:ur_adapter_level_zero>\"
-                NEOReadDebugKeys=1
-                DisableDeepBind=1)
-    else()
-        list(APPEND ENV_VARS UR_ADAPTERS_FORCE_LOAD=\"$<TARGET_FILE:ur_adapter_null>\")
+                UBSAN_OPTIONS=print_stacktrace=1)
     endif()
     if(UR_ENABLE_TRACING)
         list(APPEND ENV_VARS
@@ -33,16 +18,41 @@ function(add_fuzz_test name label)
                 XPTI_SUBSCRIBERS=$<TARGET_FILE:collector>
                 UR_ENABLE_LAYERS=UR_LAYER_TRACING)
     endif()
+
+    if(UR_BUILD_ADAPTER_L0 OR UR_BUILD_ADAPTER_ALL)
+        list(APPEND ENV_VARS
+                UR_ADAPTERS_FORCE_LOAD=\"$<TARGET_FILE:ur_adapter_level_zero>\")
+        if(UR_USE_ASAN)
+            list(APPEND ENV_VARS
+                    NEOReadDebugKeys=1
+                    DisableDeepBind=1)
+        endif()
+    else()
+        list(APPEND ENV_VARS UR_ADAPTERS_FORCE_LOAD=\"$<TARGET_FILE:ur_adapter_null>\")
+    endif()
+    
+    add_test(NAME ${TEST_TARGET_NAME}
+        COMMAND fuzztest-base ${ARGN} -verbosity=1 -detect_leaks=0
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+
     set_tests_properties(${TEST_TARGET_NAME} PROPERTIES
         LABELS ${label}
         ENVIRONMENT "${ENV_VARS}")
-    # TODO: Should we check if this sanitizer flag is available?
-    target_compile_options(${TEST_TARGET_NAME} PRIVATE -g -fsanitize=fuzzer)
-    target_compile_definitions(${TEST_TARGET_NAME} PRIVATE -DKERNEL_IL_PATH="${UR_CONFORMANCE_DEVICE_BINARIES_DIR}/fill/spir64.bin.0")
-    target_include_directories(${TEST_TARGET_NAME} PRIVATE ${UR_CONFORMANCE_DEVICE_BINARIES_DIR})
-
-    add_dependencies(${TEST_TARGET_NAME} generate_device_binaries)
 endfunction()
+
+# Create a single binary
+add_ur_executable(fuzztest-base
+    urFuzz.cpp)
+target_link_libraries(fuzztest-base
+    PRIVATE
+    ${PROJECT_NAME}::loader
+    ${PROJECT_NAME}::headers
+    ${PROJECT_NAME}::common
+    -fsanitize=fuzzer)
+target_compile_options(fuzztest-base PRIVATE -g -fsanitize=fuzzer)
+target_compile_definitions(fuzztest-base PRIVATE -DKERNEL_IL_PATH="${UR_CONFORMANCE_DEVICE_BINARIES_DIR}/fill/spir64.bin.0")
+target_include_directories(fuzztest-base PRIVATE ${UR_CONFORMANCE_DEVICE_BINARIES_DIR})
+add_dependencies(fuzztest-base generate_device_binaries)
 
 # Add long test
 add_fuzz_test(base fuzz-long -max_total_time=600 -seed=1)
