Rework null adapter into mock adapter
This also comes with a new accompanying helper header which allows tests
to override entry points and create their own reference counted dummy
handles.

--- a/scripts/core/adapter.yml
+++ b/scripts/core/adapter.yml
@@ -70,7 +70,7 @@ params:
   - type: "$x_adapter_handle_t"
     name: hAdapter
     desc: |
-          [in] Adapter handle to retain
+          [in][retain] Adapter handle to retain
 --- #--------------------------------------------------------------------------
 type: function
 desc: "Get the last adapter specific error."
