--- a/scripts/core/virtual_memory.yml
+++ b/scripts/core/virtual_memory.yml
@@ -292,7 +292,7 @@ name: Retain
 params:
     - type: $x_physical_mem_handle_t
       name: hPhysicalMem
-      desc: "[in] handle of the physical memory object to retain."
+      desc: "[in][retain] handle of the physical memory object to retain."
 
 --- #--------------------------------------------------------------------------
 type: function
