--- a/test/loader/handles/CMakeLists.txt
+++ b/test/loader/handles/CMakeLists.txt
@@ -23,5 +23,5 @@ add_test(NAME loader-handles
 
 set_tests_properties(loader-handles PROPERTIES
     LABELS "loader"
-    ENVIRONMENT "UR_ENABLE_LOADER_INTERCEPT=1;UR_ADAPTERS_FORCE_LOAD=\"$<TARGET_FILE:ur_adapter_null>\""
+    ENVIRONMENT "UR_ENABLE_LOADER_INTERCEPT=1;UR_ADAPTERS_FORCE_LOAD=\"$<TARGET_FILE:ur_adapter_mock>\""
 )
