--- a/test/loader/platforms/CMakeLists.txt
+++ b/test/loader/platforms/CMakeLists.txt
@@ -25,7 +25,7 @@ function(add_loader_platform_test name ENV)
         -D MODE=stdout
         -D MATCH_FILE=${CMAKE_CURRENT_SOURCE_DIR}/${name}.match
         -P ${PROJECT_SOURCE_DIR}/cmake/match.cmake
-        DEPENDS test-loader-platforms ur_adapter_null
+        DEPENDS test-loader-platforms ur_adapter_mock
     )
     set_tests_properties(${TEST_NAME} PROPERTIES
         LABELS "loader"
@@ -34,4 +34,4 @@ function(add_loader_platform_test name ENV)
 endfunction()
 
 add_loader_platform_test(no_platforms "UR_ADAPTERS_FORCE_LOAD=\"\"")
-add_loader_platform_test(null_platform "UR_ADAPTERS_FORCE_LOAD=\"$<TARGET_FILE:ur_adapter_null>\"")
+add_loader_platform_test(null_platform "UR_ADAPTERS_FORCE_LOAD=\"$<TARGET_FILE:ur_adapter_mock>\"")
