--- a/scripts/core/usm.yml
+++ b/scripts/core/usm.yml
@@ -433,7 +433,7 @@ ordinal: "0"
 params:
     - type: $x_usm_pool_handle_t
       name: pPool
-      desc: "[in] pointer to USM memory pool"
+      desc: "[in][retain] pointer to USM memory pool"
 returns:
     - $X_RESULT_ERROR_INVALID_NULL_HANDLE
 --- #--------------------------------------------------------------------------
