--- a/source/adapters/mock/CMakeLists.txt
+++ b/source/adapters/mock/CMakeLists.txt
@@ -3,13 +3,13 @@
 # See LICENSE.TXT
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
-set(TARGET_NAME ur_adapter_null)
+set(TARGET_NAME ur_adapter_mock)
 
 add_ur_adapter(${TARGET_NAME}
     SHARED
-        ${CMAKE_CURRENT_SOURCE_DIR}/ur_null.hpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/ur_null.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/ur_nullddi.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ur_mock.hpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ur_mock.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ur_mockddi.cpp
 )
 
 set_target_properties(${TARGET_NAME} PROPERTIES
@@ -20,4 +20,5 @@ set_target_properties(${TARGET_NAME} PROPERTIES
 target_link_libraries(${TARGET_NAME} PRIVATE
     ${PROJECT_NAME}::headers
     ${PROJECT_NAME}::common
+    ${PROJECT_NAME}::mock
 )
