--- a/source/loader/loader.def.in
+++ b/source/loader/loader.def.in
@@ -142,6 +142,7 @@ EXPORTS
 	urLoaderConfigRelease
 	urLoaderConfigRetain
 	urLoaderConfigSetCodeLocationCallback
+	urLoaderConfigSetMockingEnabled
 	urLoaderInit
 	urLoaderTearDown
 	urMemBufferCreate
@@ -361,6 +362,7 @@ EXPORTS
 	urPrintLoaderConfigReleaseParams
 	urPrintLoaderConfigRetainParams
 	urPrintLoaderConfigSetCodeLocationCallbackParams
+	urPrintLoaderConfigSetMockingEnabledParams
 	urPrintLoaderInitParams
 	urPrintLoaderTearDownParams
 	urPrintMapFlags
