Re-do docs and testing

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(adapters)
 add_subdirectory(usm)
 add_subdirectory(layers)
 add_subdirectory(unit)
+add_subdirectory(mock)
 if(UR_BUILD_TOOLS)
   add_subdirectory(tools)
 endif()
