Fix tests that relied on old null adapter behaviour.

--- a/test/layers/validation/CMakeLists.txt
+++ b/test/layers/validation/CMakeLists.txt
@@ -14,6 +14,7 @@ function(add_validation_test_executable name)
         ${PROJECT_NAME}::loader
         ${PROJECT_NAME}::headers
         ${PROJECT_NAME}::testing
+        ${PROJECT_NAME}::mock
         GTest::gtest_main)
 endfunction()
 
