--- a/test/tools/urtrace/CMakeLists.txt
+++ b/test/tools/urtrace/CMakeLists.txt
@@ -24,9 +24,9 @@ function(add_trace_test name CLI_ARGS)
     set_tests_properties(${TEST_NAME} PROPERTIES LABELS "urtrace")
 endfunction()
 
-add_trace_test(null_hello "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --null")
-add_trace_test(null_hello_no_args "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --null --no-args")
-add_trace_test(null_hello_filter_device "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --null --filter \".*Device.*\"")
-add_trace_test(null_hello_profiling "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --null --profiling --time-unit ns")
-add_trace_test(null_hello_begin "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --null --print-begin")
-add_trace_test(null_hello_json "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --null --json")
+add_trace_test(mock_hello "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --mock")
+add_trace_test(mock_hello_no_args "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --mock --no-args")
+add_trace_test(mock_hello_filter_device "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --mock --filter \".*Device.*\"")
+add_trace_test(mock_hello_profiling "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --mock --profiling --time-unit ns")
+add_trace_test(mock_hello_begin "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --mock --print-begin")
+add_trace_test(mock_hello_json "--libpath $<TARGET_FILE_DIR:ur_adapter_mock> --mock --json")
