Add support for static linking of the L0 adapter
This patch adds a cmake option that builds the L0 adapter
as a static library and then embeds its in the loader.
The mechanim itself is fairly generic and, when a need arises,
the same can be done for other adapters.

--- a/.github/workflows/build-hw-reusable.yml
+++ b/.github/workflows/build-hw-reusable.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       matrix:
         adapter: [
-          {name: "${{inputs.name}}", platform: "${{inputs.platform}}"},
+          {name: "${{inputs.name}}", platform: "${{inputs.platform}}", static: OFF},
         ]
         build_type: [Debug, Release]
         compiler: [{c: gcc, cxx: g++}, {c: clang, cxx: clang++}]
@@ -37,6 +37,10 @@ jobs:
         exclude:
          - adapter: {name: L0, platform: ""}
            compiler: {c: clang, cxx: clang++}
+        include:
+         - adapter: {name: L0, platform: "", static: ON}
+           build_type: [Debug]
+           compiler: {c: gcc, cxx: g++}
 
     runs-on: ${{matrix.adapter.name}}
 
@@ -63,6 +67,7 @@ jobs:
         -DUR_DEVELOPER_MODE=ON
         -DUR_BUILD_TESTS=ON
         -DUR_BUILD_ADAPTER_${{matrix.adapter.name}}=ON
+        -DUR_STATIC_ADAPTER_${{matrix.adapter.name}}=${{matrix.adapter.static}}
         -DUR_DPCXX=${{github.workspace}}/dpcpp_compiler/bin/clang++
         -DUR_SYCL_LIBRARY_DIR=${{github.workspace}}/dpcpp_compiler/lib
         ${{ matrix.adapter.name == 'HIP' && '-DUR_CONFORMANCE_AMD_ARCH=gfx1030' || '' }}
