--- a/source/loader/CMakeLists.txt
+++ b/source/loader/CMakeLists.txt
@@ -55,6 +55,13 @@ target_link_libraries(ur_loader PRIVATE
     ${PROJECT_NAME}::headers
 )
 
+if(UR_STATIC_ADAPTER_L0)
+    target_link_libraries(ur_loader PRIVATE
+        ur_adapter_level_zero
+    )
+    target_compile_definitions(ur_loader PUBLIC UR_STATIC_ADAPTER_LEVEL_ZERO)
+endif()
+
 if(UR_ENABLE_TRACING)
     target_link_libraries(ur_loader PRIVATE ${TARGET_XPTI})
     target_include_directories(ur_loader PRIVATE ${xpti_SOURCE_DIR}/include)
